--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: ruby
 rvm:
   - 2.1
   - ruby-head
-  - rbx-19mode
+  - rbx
+  - rbx-head
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - rvm: rbx-19mode
+    - rvm: rbx
+    - rvm: rbx-head
 notifications:
   email:
     on_success: always
